# task_manager_project_api

./: .dockerignore  Dockerfile  db.sqlite3  pyproject.toml
configuration/: settings.py  urls.py
scripts/: launch.sh
task_manager/: models.py  serializers.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_alter_task_owner.py  0003_project_task_project.py  0004_alter_project_owner.py  0005_alter_task_project.py
